# ems

./: .dockerignore  .gitignore  .timetracker  Dockerfile  app.py  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
migrations/: alembic.ini
migrations/versions/: 0a8a4a1eb509_update_user_model.py  3b57ceb30fd3_add_favorite_field_to_users.py  5e4b20ed2cd3_initial_migration.py
templates/: base.html  index.html  login.html  senders.html
